--- a/news1.html
+++ b/news1.html
@@ -237,6 +237,22 @@
         </div>
       </div>
     </header>
+    <button id="mobileToggle" aria-label="Открыть меню" style="display:none;background:transparent;border:0;color:#fff;font-weight:800;padding:8px 10px;border-radius:8px">⋮</button>
+    <div class="mobile-menu" id="mobileMenu" aria-hidden="true">
+      <button class="close-btn" id="mobileClose">Закрыть ✕</button>
+      <nav>
+        <a href="index.html">Главная</a>
+        <a href="about.html">О нас</a>
+        <a href="index.html#news">Новости</a>
+        <a href="index.html#docs">Документы</a>
+        <a href="leadership.html">Руководство</a>
+        <a href="media.html">Медиа</a>
+        <a href="competitions.html">Соревнования</a>
+        <a href="achievements.html">Достижения</a>
+        <a href="partners.html">Партнёры и спонсоры</a>
+        <a href="regional.html">Региональное отделение</a>
+      </nav>
+    </div>
 
   <section class="federation-hero">
     <div class="federation-container">
