ui: hide mobile close buttons on desktop; load mobile.css for small screens

--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Новости Федерации — Казахстанская Федерация функционального многоборья</title>
   <meta name="description" content="Новости Казахстанской Федерации функционального многоборья" />
+  <link rel="stylesheet" href="/mobile.css" media="(max-width:768px)">
+  <style>.close-btn, .lb-close{display:none !important;}</style>
   <style>
     :root {
       --blue:#0b63b7;--blue-2:#2b78b9;--muted:#f4f8ff;
