--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Казахстанская Федерация функционального многоборья</title>
   <meta name="description" content="Официальный сайт Казахстанской Федерации функционального многоборья" />
+  <link rel="stylesheet" href="/mobile.css" media="(max-width:768px)">
+  <style>
+    /* Hide mobile-only close buttons on desktop; mobile.css will re-enable them on small screens */
+    .close-btn, .lb-close { display: none !important; }
+  </style>
   <style>
     :root{
       --blue:#0b63b7;
