mobile: include mobile.css on all pages; hide mobile close buttons on desktop via inline head style

--- a/partners.html
+++ b/partners.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Партнёры и спонсоры — Казахстанская Федерация функционального многоборья</title>
-  <style>body{font-family:Inter,system-ui,Arial;margin:24px;color:#0b2340}a{color:#0b63b7}</style>
+    <link rel="stylesheet" href="/mobile.css" media="(max-width:768px)">
+    <style>.close-btn, .lb-close{display:none !important;}</style>
 </head>
 <body>
   <h1>Партнёры и спонсоры</h1>
