--- a/competitions.html
+++ b/competitions.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link rel="stylesheet" href="/mobile.css" media="(max-width:768px)">
+    <style>.close-btn, .lb-close{display:none !important;}</style>
   <title>Соревнования — Казахстанская Федерация функционального многоборья</title>
   <style>body{font-family:Inter,system-ui,Arial;margin:24px;color:#0b2340}a{color:#0b63b7}</style>
 </head>
