--- a/docs1.html
+++ b/docs1.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <link rel="stylesheet" href="/mobile.css" media="(max-width:768px)">
+  <style>.close-btn, .lb-close{display:none !important;}</style>
   <title>Новости Федерации — Казахстанская Федерация функционального многоборья</title>
   <meta name="description" content="Новости Казахстанской Федерации функционального многоборья" />
   <style>
