--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Казахстанская Федерация функционального многоборья</title>
   <meta name="description" content="Официальный сайт Казахстанской Федерации функционального многоборья" />
   <link rel="stylesheet" href="/mobile.css" media="(max-width:768px)">
