--- a/index.html
+++ b/index.html
@@ -420,7 +420,9 @@
         </nav>
       </div>
         <!-- mobile hamburger toggle (visible on mobile only) -->
-        <button id="mobileToggle" aria-label="Открыть меню" style="display:none;background:transparent;border:0;color:#fff;font-weight:800;padding:8px 10px;border-radius:8px">☰</button>
+        <button id="mobileToggle" aria-label="Открыть меню" style="display:none;background:transparent;border:0;color:#fff;font-weight:800;padding:8px 10px;border-radius:8px">
+          <img src="/hamburger.png" class="mobile-toggle-img" alt="Меню">
+        </button>
           <div class="more-dropdown" id="moreDropdown" style="margin-right:10px;">
             <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
             <img src="/tochka.png" class="more-icon" alt="menu">
@@ -1056,13 +1058,15 @@
       const mobileToggle = document.getElementById('mobileToggle');
       const mobileMenu = document.getElementById('mobileMenu');
       const mobileClose = document.getElementById('mobileClose');
+      // unified toggle: clicking the same button opens or closes the menu
       if(mobileToggle && mobileMenu){
         mobileToggle.addEventListener('click', ()=>{
-          mobileMenu.style.display = 'block'; mobileMenu.setAttribute('aria-hidden','false');
+          const isOpen = mobileMenu.classList.toggle('open');
+          mobileMenu.setAttribute('aria-hidden', String(!isOpen));
         });
       }
       if(mobileClose && mobileMenu){
-        mobileClose.addEventListener('click', ()=>{ mobileMenu.style.display='none'; mobileMenu.setAttribute('aria-hidden','true'); });
+        mobileClose.addEventListener('click', ()=>{ mobileMenu.classList.remove('open'); mobileMenu.setAttribute('aria-hidden','true'); });
       }
 
       // show/hide docs arrows depending on overflow
