mobile: use /tochka.png for mobile toggle image (replace hamburger.png)

--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
       </div>
         <!-- mobile hamburger toggle (visible on mobile only) -->
         <button id="mobileToggle" aria-label="Открыть меню" style="display:none;background:transparent;border:0;color:#fff;font-weight:800;padding:8px 10px;border-radius:8px">
-          <img src="/hamburger.png" class="mobile-toggle-img" alt="Меню">
+          <img src="/tochka.png" class="mobile-toggle-img" alt="Меню">
         </button>
           <div class="more-dropdown" id="moreDropdown" style="margin-right:10px;">
             <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
