--- a/leadership.html
+++ b/leadership.html
@@ -251,7 +251,7 @@
       </div>
     </header>
     <button id="mobileToggle" aria-label="Открыть меню" style="display:none;background:transparent;border:0;color:#fff;font-weight:800;padding:8px 10px;border-radius:8px">
-      <img src="/hamburger.png" class="mobile-toggle-img" alt="Меню">
+      <img src="/tochka.png" class="mobile-toggle-img" alt="Меню">
     </button>
     <div class="mobile-menu" id="mobileMenu" aria-hidden="true">
       <button class="close-btn" id="mobileClose">Закрыть ✕</button>
