mobile: vertical mobile menu, fixed federation hero layout, events horizontal scroll, add mobile.js and minimal mobile header for about.html

--- a/docs2.html
+++ b/docs2.html
@@ -385,6 +385,7 @@
       © 2025 Все права защищены — Казахстанская Федерация функционального многоборья
     </div>
   </footer>
+<script src="/mobile.js"></script>
 <script src="/lang.js"></script>
 </body>
 </html>
