--- a/index.html
+++ b/index.html
@@ -1147,7 +1147,8 @@
   </script>
 
   <footer>
-    <div class="footer-inner">
+<script src="/mobile.js"></script>
+<script src="/lang.js"></script>
       <div style="display:flex;align-items:center;gap:12px">
   <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;object-fit:cover;border-radius:8px;box-shadow:0 8px 24px rgba(3,20,45,0.12);">
       </div>
