--- a/news2.html
+++ b/news2.html
@@ -380,5 +380,6 @@
       © 2025 Все права защищены — Казахстанская Федерация функционального многоборья
     </div>
   </footer>
+<script src="/mobile.js"></script>
 </body>
 </html>
