--- a/about.html
+++ b/about.html
@@ -198,52 +198,30 @@
   <header>
     <div class="nav-row">
       <div class="brand">
-  <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
+        <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
         <nav class="main-nav">
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
           <a href="index.html#news">Новости</a>
           <a href="index.html#docs">Документы</a>
-            <a href="index.html#docs">Документы</a>
-          <!-- одна видимая дополнительная кнопка -->
           <a href="leadership.html">Руководство</a>
-          <!-- остальные кнопки в выпадающем меню '...' (вынесено перед соцсетями) -->
         </nav>
       </div>
-
-          <div class="more-dropdown" id="moreDropdown">
-            <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
-                <img src="/tochka.png" class="more-icon" alt="menu">
-            </button>
-            <div class="more-menu" id="moreMenu" style="display:none">
-              <a href="media.html">Медиа</a>
-              <a href="competitions.html">Соревнования</a>
-              <a href="achievements.html">Достижения</a>
-              <a href="partners.html">Партнёры и спонсоры</a>
-              <a href="regional.html">Региональное отделение</a>
-            </div>
-          </div>
-      <div class="socials">
-        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-  <img src="/instagramlogo.png" alt="Instagram">
-  </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
-      </div>
-    </div>
-      <div id="langWrap" style="position:absolute;right:160px;top:50%;transform:translateY(-50%);z-index:80;">
-        <button id="langToggle" style="background:transparent;color:#fff;border:0;font-weight:700;cursor:pointer;padding:8px 10px;">
-          <span id="langCurrent">RU</span> ▾
+      <!-- mobile-only simplified header (visible only on small screens via mobile.css) -->
+      <div class="mobile-only-header" style="display:none;">
+        <button id="mobileToggle" aria-label="Открыть меню" style="background:transparent;border:0;color:#fff;padding:8px;">
+          <img src="/tochka.png" class="mobile-toggle-img" alt="Меню">
         </button>
-        <div id="langDropdown" style="display:none;position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:#000;border-radius:8px;padding:6px;min-width:120px;box-shadow:0 8px 24px rgba(3,20,45,0.12);">
-          <a href="#" data-lang="ru" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Рус</a>
-          <a href="#" data-lang="kk" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Қаз</a>
-          <a href="#" data-lang="en" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Eng</a>
+        <div style="display:flex;align-items:center;gap:8px;">
+          <img src="/footer-logo.png" alt="Логотип" style="width:72px;height:auto;">
+        </div>
+        <div class="footer-socials" style="display:flex;gap:8px;align-items:center;">
+          <a class="social-btn" href="https://instagram.com/yourprofile"><img src="/instagramlogo.png" style="width:24px;height:24px;"></a>
+          <a class="social-btn" href="https://t.me/yourchannel"><img src="/telegramlogo.png" style="width:24px;height:24px;"></a>
         </div>
       </div>
-    </header>
+    </div>
+  </header>
     <button id="mobileToggle" aria-label="Открыть меню" style="display:none;background:transparent;border:0;color:#fff;font-weight:800;padding:8px 10px;border-radius:8px">
       <img src="/tochka.png" class="mobile-toggle-img" alt="Меню">
     </button>
@@ -369,6 +347,7 @@
       © 2025 Все права защищены — Казахстанская Федерация функционального многоборья
     </div>
   </footer>
+<script src="/mobile.js"></script>
 <script src="/lang.js"></script>
 </body>
 </html>
