--- a/news1.html
+++ b/news1.html
@@ -413,6 +413,7 @@
       © 2025 Все права защищены — Казахстанская Федерация функционального многоборья
     </div>
   </footer>
+<script src="/mobile.js"></script>
 <script src="/lang.js"></script>
 </body>
 </html>
