--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
 }
 
   /* language control: single button + dropdown */
-  .lang-wrap{position:absolute;right:12px;top:50%;transform:translateY(-50%);display:inline-block;z-index:80}
+  /* position language toggle near the top of the header on the homepage */
+  .lang-wrap{position:absolute;right:12px;top:10px;transform:none;display:inline-block;z-index:80}
   .lang-toggle{background:transparent;color:#fff;border:1px solid rgba(255,255,255,0.12);padding:6px 10px;border-radius:8px;cursor:pointer;font-weight:800}
   .lang-toggle span{font-weight:900}
   .lang-dropdown{display:none;position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:var(--text);border-radius:8px;box-shadow:0 8px 24px rgba(3,20,45,0.12);overflow:hidden}
@@ -864,8 +865,8 @@
       <div class="map-frame" style="max-width:1200px;margin:0 auto;">
       <div style="position:relative;overflow:hidden;height:100%;">
         <div class="map-badge">Адрес: Астана, проспект Бауыржана Момышулы, 16</div>
-        <!-- Yandex map WITHOUT placemark (marker removed) -->
-        <iframe src="https://yandex.kz/map-widget/v1/?ll=69.139635%2C54.861865&z=16" width="100%" height="100%" frameborder="1" allowfullscreen="true" style="position:relative;border:0;"></iframe>
+        <!-- Yandex map WITH placemark (marker added) -->
+        <iframe src="https://yandex.kz/map-widget/v1/?ll=69.139635%2C54.861865&z=16&pt=69.139635,54.861865,pm2rdm" width="100%" height="100%" frameborder="1" allowfullscreen="true" style="position:relative;border:0;"></iframe>
         <!-- transparent overlay: clicking anywhere opens the address in Yandex.Maps in a new tab -->
         <a class="map-overlay" href="https://yandex.kz/maps/?ll=69.139635%2C54.861865&z=16" target="_blank" rel="noopener noreferrer" title="Открыть в Яндекс.Картах"></a>
         <!-- visible quick link (optional) -->
@@ -901,7 +902,7 @@
         try{
           const mapIframe = document.querySelector('.map-frame iframe');
           if(!mapIframe) return;
-          const astanaSrc = 'https://yandex.kz/map-widget/v1/?ll=69.139635%2C54.861865&z=16';
+          const astanaSrc = 'https://yandex.kz/map-widget/v1/?ll=69.139635%2C54.861865&z=16&pt=69.139635,54.861865,pm2rdm';
           if(mapIframe.getAttribute('src') !== astanaSrc) mapIframe.setAttribute('src', astanaSrc);
           // second attempt after short delay to handle race conditions
           setTimeout(()=>{ if(mapIframe.getAttribute('src') !== astanaSrc) mapIframe.setAttribute('src', astanaSrc); }, 250);
