content: rename 'Региональное отделение' → 'Карта залов'; add 'Скачать' buttons to document pages; update lang dict

--- a/about.html
+++ b/about.html
@@ -231,7 +231,7 @@
               <a href="competitions.html">Соревнования</a>
               <a href="achievements.html">Достижения</a>
               <a href="partners.html">Партнёры и спонсоры</a>
-              <a href="regional.html">Региональное отделение</a>
+              <a href="map.html">Карта залов</a>
             </div>
           </div>
       <div class="socials">
@@ -268,7 +268,7 @@
         <a href="competitions.html">Соревнования</a>
         <a href="achievements.html">Достижения</a>
         <a href="partners.html">Партнёры и спонсоры</a>
-        <a href="regional.html">Региональное отделение</a>
+  <a href="map.html">Карта залов</a>
       </nav>
     </div>
 
