--- a/news4.html
+++ b/news4.html
@@ -261,7 +261,14 @@
   <header>
     <div class="nav-row">
       <div class="brand">
-  <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
+        <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
+        <div class="header-socials" style="display:inline-flex;gap:8px;margin-left:8px;align-items:center;">
+          <a class="social-btn" href="https://instagram.com/fffk.20_23" target="_blank" rel="noopener"><img src="/instagramlogo.png" alt="Instagram" style="width:24px;height:24px"></a>
+          <a class="social-btn" href="https://t.me/fffkkz2023" target="_blank" rel="noopener"><img src="/telegramlogo.png" alt="Telegram" style="width:24px;height:24px"></a>
+          <a class="social-btn" href="https://www.facebook.com/share/1DFY4jSz3e/?mibextid=wwXIfr" target="_blank" rel="noopener"><img src="/facebooklogo.png" alt="Facebook" style="width:24px;height:24px"></a>
+          <a class="social-btn" href="https://www.tiktok.com/@fffk_funcsport?_t=ZM-90WDZha6UqB&_r=1" target="_blank" rel="noopener"><img src="/tiktoklogo.png" alt="TikTok" style="width:24px;height:24px"></a>
+          <a class="social-btn" href="https://youtube.com/@fffk2023" target="_blank" rel="noopener"><img src="/youtubelogo.png" alt="YouTube" style="width:24px;height:24px"></a>
+        </div>
         <nav class="main-nav">
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
@@ -280,7 +287,7 @@
               <a href="competitions.html">Соревнования</a>
               <a href="achievements.html">Достижения</a>
               <a href="partners.html">Партнёры и спонсоры</a>
-              <a href="regional.html">Региональное отделение</a>
+              <a href="map.html">Карта залов</a>
             </div>
           </div>
       <div class="socials">
@@ -472,15 +479,23 @@
   <a href="index.html#docs" style="color:#fff;font-weight:600;">Документы</a>
         <a href="competitions.html" style="color:#fff;font-weight:600;">Соревнования</a>
       </nav>
-      <div class="footer-socials">
-        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-          <img src="/instagramlogo.png" alt="Instagram">
-        </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
-      </div>
+        <div class="footer-socials">
+          <a class="social-btn" href="https://instagram.com/fffk.20_23" target="_blank" rel="noopener">
+            <img src="/instagramlogo.png" alt="Instagram">
+          </a>
+          <a class="social-btn" href="https://t.me/fffkkz2023" target="_blank" rel="noopener">
+            <img src="/telegramlogo.png" alt="Telegram">
+          </a>
+          <a class="social-btn" href="https://www.facebook.com/share/1DFY4jSz3e/?mibextid=wwXIfr" target="_blank" rel="noopener">
+            <img src="/facebooklogo.png" alt="Facebook">
+          </a>
+          <a class="social-btn" href="https://www.tiktok.com/@fffk_funcsport?_t=ZM-90WDZha6UqB&_r=1" target="_blank" rel="noopener">
+            <img src="/tiktoklogo.png" alt="TikTok">
+          </a>
+          <a class="social-btn" href="https://youtube.com/@fffk2023" target="_blank" rel="noopener">
+            <img src="/youtubelogo.png" alt="YouTube">
+          </a>
+        </div>
     </div>
 
     <div class="footer-bottom">
