--- a/docs1.html
+++ b/docs1.html
@@ -145,7 +145,7 @@
               <a href="competitions.html">Соревнования</a>
               <a href="achievements.html">Достижения</a>
               <a href="partners.html">Партнёры и спонсоры</a>
-              <a href="regional.html">Региональное отделение</a>
+              <a href="map.html">Карта залов</a>
             </div>
           </div>
       <div class="socials">
@@ -217,6 +217,7 @@
         <div style="margin-top:12px;">
           <!-- Убрана кнопка «Подробнее». Одна синяя кнопка ведёт на главную. -->
           <a href="index.html" style="background:#0b63b7;color:#fff;padding:8px 18px;border-radius:999px;font-weight:700;text-transform:uppercase;font-size:14px;letter-spacing:0.3px;text-decoration:none;display:inline-block">Вернуться на главную</a>
+          <a href="/pologenie.pdf" download style="margin-left:10px;background:#e0e0e0;color:#0b2340;padding:8px 14px;border-radius:10px;font-weight:700;text-decoration:none;display:inline-block">Скачать</a>
         </div>
       </div>
     </section>
@@ -235,13 +236,11 @@
         <a href="competitions.html" style="color:#fff;font-weight:600;">Соревнования</a>
       </nav>
       <div class="footer-socials">
-        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="/instagramlogo.png" alt="Instagram">
-  </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
+          <a class="social-btn" href="https://instagram.com/fffk.20_23" target="_blank" rel="noopener"><img src="/instagramlogo.png" alt="Instagram"></a>
+          <a class="social-btn" href="https://t.me/fffkkz2023" target="_blank" rel="noopener"><img src="/telegramlogo.png" alt="Telegram"></a>
+          <a class="social-btn" href="https://www.facebook.com/share/1DFY4jSz3e/?mibextid=wwXIfr" target="_blank" rel="noopener"><img src="/facebooklogo.png" alt="Facebook"></a>
+          <a class="social-btn" href="https://www.tiktok.com/@fffk_funcsport?_t=ZM-90WDZha6UqB&_r=1" target="_blank" rel="noopener"><img src="/tiktoklogo.png" alt="TikTok"></a>
+          <a class="social-btn" href="https://youtube.com/@fffk2023" target="_blank" rel="noopener"><img src="/youtubelogo.png" alt="YouTube"></a>
       </div>
     </div>
 
