--- a/news.html
+++ b/news.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Новости Федерации — Казахстанская Федерация функционального многоборья</title>
   <meta name="description" content="Новости Казахстанской Федерации функционального многоборья" />
+  <link rel="stylesheet" href="/mobile.css" media="(max-width:768px)">
+  <style>.close-btn, .lb-close{display:none !important;}</style>
   <style>
     :root {
       --blue:#0b63b7;--blue-2:#2b78b9;--muted:#f4f8ff;
@@ -30,11 +32,17 @@
   nav a{margin:0 8px;font-weight:600;color:#fff;opacity:0.95}
   /* расширенная навигация: кнопка «...» с выпадающим меню */
   nav.main-nav{display:flex;align-items:center;gap:8px}
+  .more-dropdown{position:absolute;right:320px;top:50%;transform:translateY(-50%);z-index:70;display:inline-block}
   .more-dropdown{position:absolute;right:360px;top:50%;transform:translateY(-50%);z-index:70;display:inline-block}
-  .more-btn{background:transparent;color:#fff;border:none;font-size:26px;cursor:pointer;padding:8px 10px;border-radius:8px;font-weight:900;line-height:1}
+  .more-btn{background:transparent;color:#fff;border:none;cursor:pointer;padding:8px 10px;border-radius:8px;font-weight:900;line-height:1;display:inline-flex;align-items:center;justify-content:center}
+  /* hamburger: three horizontal bars instead of vertical dots */
+  .more-btn .hamburger{width:20px;height:2px;background:#fff;border-radius:2px;display:block;position:relative}
+  .more-btn .hamburger::before,
+  .more-btn .hamburger::after{content:"";position:absolute;left:0;right:0;height:2px;background:#fff;border-radius:2px}
+  .more-btn .hamburger::before{top:-6px}
+  .more-btn .hamburger::after{top:6px}
   /* icon image replacement: use the image file `tochka.png` (place it in project root) */
   .more-btn .more-icon{width:22px;height:22px;object-fit:contain;display:block}
-  /* вертикальные точки: используем символ U+22EE (⋮) */
   .more-menu{position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:var(--text);box-shadow:0 8px 24px rgba(3,20,45,0.12);border-radius:10px;overflow:hidden;min-width:220px;z-index:60;padding:6px 0}
   .more-menu a{display:block;padding:10px 14px;color:var(--text);font-weight:700;border-bottom:1px solid rgba(0,0,0,0.04);text-decoration:none}
   /* hover: немного серее */
@@ -95,7 +103,74 @@
       .federation-text h2{font-size:18px}
     }
 
-   
+    /* новости */
+    .news-grid {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      gap: 24px;
+      margin-top: 32px;
+    }
+    .news-item {
+      background: #fff;
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: 0 4px 14px rgba(11,99,183,0.12);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      display: flex;
+      flex-direction: column;
+    }
+    .news-item:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 8px 22px rgba(11,99,183,0.2);
+    }
+    .news-item img {
+      width: 100%;
+      height: 220px;
+      object-fit: cover;
+    }
+    .news-content {
+      padding: 16px 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      flex-grow: 1;
+    }
+    .news-date {
+      font-size: 14px;
+      color: #0b63b7;
+      font-weight: 700;
+    }
+    .news-title {
+      font-size: 18px;
+      font-weight: 800;
+      color: var(--text);
+    }
+    .news-desc {
+      color: #555;
+      font-size: 15px;
+      flex-grow: 1;
+    }
+    .news-link {
+      display: inline-block;
+      margin-top: 8px;
+      color: #fff;
+      background: #0b63b7;
+      padding: 8px 16px;
+      border-radius: 999px;
+      font-weight: 700;
+      text-align: center;
+      transition: background 0.3s ease;
+      align-self: flex-start;
+    }
+    .news-link:hover {
+      background: #2b78b9;
+    }
+
+    @media(max-width:768px){
+      .news-grid {
+        grid-template-columns: 1fr;
+      }
+    }
 
     footer{
       margin-top:28px;padding:0;border-top:1px solid rgba(11,99,183,0.06);
@@ -127,41 +202,61 @@
           <a href="index.html#docs">Документы</a>
           <!-- одна видимая дополнительная кнопка -->
           <a href="leadership.html">Руководство</a>
-          <!-- остальные кнопки в выпадающем меню '...' -->
-            <div class="more-dropdown" id="moreDropdown">
-            <button class="more-btn" id="moreBtn">⋮</button>
+          <!-- остальные кнопки в выпадающем меню '...' (вынесено перед соцсетями) -->
+        </nav>
+      </div>
+
+          <div class="more-dropdown" id="moreDropdown">
+            <button class="more-btn" id="moreBtn" aria-label="Меню дополнительных ссылок" style="padding:8px 10px;">
+                <img src="/tochka.png" class="more-icon" alt="menu">
+            </button>
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
               <a href="competitions.html">Соревнования</a>
               <a href="achievements.html">Достижения</a>
               <a href="partners.html">Партнёры и спонсоры</a>
-          <a href="map.html">Карта залов</a>
+              <a href="map.html">Карта залов</a>
             </div>
           </div>
-        </nav>
-      </div>
-
-          <!-- single language toggle with dropdown (shared fragment) -->
-          <div class="lang-wrap" id="langWrap">
-            <button class="lang-toggle" id="langToggle"><span id="langCurrent">RU</span> ▾</button>
-            <div class="lang-dropdown" id="langDropdown">
-              <button data-lang="kz">KZ</button>
-              <button data-lang="ru">RU</button>
-              <button data-lang="en">EN</button>
-            </div>
-          </div>
-
-      <div class="socials">
-        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="/instagramlogo.png" alt="Instagram">
+  <div class="socials">
+    <a class="social-btn" href="https://instagram.com/fffk.20_23" target="_blank" rel="noopener">
+  <img src="/instagramlogo.png" alt="Instagram">
   </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
-      </div>
+  <a class="social-btn" href="https://t.me/fffkkz2023" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
+  <a class="social-btn" href="https://www.facebook.com/share/1DFY4jSz3e/?mibextid=wwXIfr" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
+  <a class="social-btn" href="https://www.tiktok.com/@fffk_funcsport?_t=ZM-90WDZha6UqB&_r=1" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
+  <a class="social-btn" href="https://youtube.com/@fffk2023" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
+  </div>
     </div>
-  </header>
+      <div id="langWrap" style="position:absolute;right:160px;top:50%;transform:translateY(-50%);z-index:80;">
+        <button id="langToggle" style="background:transparent;color:#fff;border:0;font-weight:700;cursor:pointer;padding:8px 10px;">
+          <span id="langCurrent">RU</span> ▾
+        </button>
+        <div id="langDropdown" style="display:none;position:absolute;right:0;top:calc(100% + 8px);background:#fff;color:#000;border-radius:8px;padding:6px;min-width:120px;box-shadow:0 8px 24px rgba(3,20,45,0.12);">
+          <a href="#" data-lang="ru" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Рус</a>
+          <a href="#" data-lang="kk" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Қаз</a>
+          <a href="#" data-lang="en" style="display:block;padding:8px 12px;text-decoration:none;color:inherit;">Eng</a>
+        </div>
+      </div>
+    </header>
+    <button id="mobileToggle" aria-label="Открыть меню" style="display:none;background:transparent;border:0;color:#fff;font-weight:800;padding:8px 10px;border-radius:8px">
+      <img src="/tochka.png" class="mobile-toggle-img" alt="Меню">
+    </button>
+    <div class="mobile-menu" id="mobileMenu" aria-hidden="true">
+      <button class="close-btn" id="mobileClose">Закрыть ✕</button>
+      <nav>
+        <a href="index.html">Главная</a>
+        <a href="about.html">О нас</a>
+        <a href="index.html#news">Новости</a>
+        <a href="index.html#docs">Документы</a>
+        <a href="leadership.html">Руководство</a>
+        <a href="media.html">Медиа</a>
+        <a href="competitions.html">Соревнования</a>
+        <a href="achievements.html">Достижения</a>
+        <a href="partners.html">Партнёры и спонсоры</a>
+  <a href="map.html">Карта залов</a>
+      </nav>
+    </div>
 
   <section class="federation-hero">
     <div class="federation-container">
@@ -178,6 +273,7 @@
   </section>
 
   <main class="container">
+
 
 
 
@@ -198,17 +294,6 @@
   })();
 </script>
 
-<script>
-  // show mobile menu toggle only on small screens
-  (function(){
-    const mobileToggle = document.getElementById('mobileToggle');
-    function update(){ if(window.innerWidth <= 768){ if(mobileToggle) mobileToggle.style.display='inline-flex' } else { if(mobileToggle) mobileToggle.style.display='none' } }
-    window.addEventListener('resize', update);
-    document.addEventListener('DOMContentLoaded', update);
-    update();
-  })();
-</script>
-
   </main>
 
   <footer>
@@ -218,24 +303,25 @@
         <a href="index.html" style="color:#fff;font-weight:600;">Главная</a>
         <a href="about.html" style="color:#fff;font-weight:600;">О нас</a>
         <a href="news.html" style="color:#fff;font-weight:600;">Новости</a>
-        <a href="media.html" style="color:#fff;font-weight:600;">Медиа</a>
+    <a href="media.html" style="color:#fff;font-weight:600;">Медиа</a>
   <a href="index.html#docs" style="color:#fff;font-weight:600;">Документы</a>
         <a href="competitions.html" style="color:#fff;font-weight:600;">Соревнования</a>
       </nav>
-      <div class="footer-socials">
-        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-    <img src="/instagramlogo.png" alt="Instagram">
+  <div class="footer-socials">
+    <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
+  <img src="/instagramlogo.png" alt="Instagram">
   </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
-      </div>
+    <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
+    <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
+    <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
+    <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
+  </div>
     </div>
 
     <div class="footer-bottom">
       © 2025 Все права защищены — Казахстанская Федерация функционального многоборья
     </div>
   </footer>
+<script src="/lang.js"></script>
 </body>
 </html>
