--- a/news1.html
+++ b/news1.html
@@ -215,18 +215,18 @@
               <a href="competitions.html">Соревнования</a>
               <a href="achievements.html">Достижения</a>
               <a href="partners.html">Партнёры и спонсоры</a>
-              <a href="regional.html">Региональное отделение</a>
+              <a href="map.html">Карта залов</a>
             </div>
           </div>
-      <div class="socials">
-        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
+  <div class="socials">
+    <a class="social-btn" href="https://instagram.com/fffk.20_23" target="_blank" rel="noopener">
   <img src="/instagramlogo.png" alt="Instagram">
   </a>
-        <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-        <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-        <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-        <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
-      </div>
+  <a class="social-btn" href="https://t.me/fffkkz2023" target="_blank" rel="noopener"><img src="/telegramlogo.png" alt="Telegram"></a>
+  <a class="social-btn" href="https://www.facebook.com/share/1DFY4jSz3e/?mibextid=wwXIfr" target="_blank" rel="noopener"><img src="/facebooklogo.png" alt="Facebook"></a>
+  <a class="social-btn" href="https://www.tiktok.com/@fffk_funcsport?_t=ZM-90WDZha6UqB&_r=1" target="_blank" rel="noopener"><img src="/tiktoklogo.png" alt="TikTok"></a>
+  <a class="social-btn" href="https://youtube.com/@fffk2023" target="_blank" rel="noopener"><img src="/youtubelogo.png" alt="YouTube"></a>
+  </div>
     </div>
       <div id="langWrap" style="position:absolute;right:160px;top:50%;transform:translateY(-50%);z-index:80;">
         <button id="langToggle" style="background:transparent;color:#fff;border:0;font-weight:700;cursor:pointer;padding:8px 10px;">
@@ -254,7 +254,7 @@
         <a href="competitions.html">Соревнования</a>
         <a href="achievements.html">Достижения</a>
         <a href="partners.html">Партнёры и спонсоры</a>
-        <a href="regional.html">Региональное отделение</a>
+  <a href="map.html">Карта залов</a>
       </nav>
     </div>
 
@@ -399,13 +399,11 @@
         <a href="competitions.html" style="color:#fff;font-weight:600;">Соревнования</a>
       </nav>
   <div class="footer-socials">
-    <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
-  <img src="/instagramlogo.png" alt="Instagram">
-  </a>
-    <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
-    <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
-    <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
-    <a class="social-btn" href="https://youtube.com/yourchannel" target="_blank"><img src="/youtubelogo.png" alt="YouTube"></a>
+    <a class="social-btn" href="https://instagram.com/fffk.20_23" class="social-btn" target="_blank" rel="noopener"><img src="/instagramlogo.png" alt="Instagram"></a>
+    <a class="social-btn" href="https://t.me/fffkkz2023" class="social-btn" target="_blank" rel="noopener"><img src="/telegramlogo.png" alt="Telegram"></a>
+    <a class="social-btn" href="https://www.facebook.com/share/1DFY4jSz3e/?mibextid=wwXIfr" class="social-btn" target="_blank" rel="noopener"><img src="/facebooklogo.png" alt="Facebook"></a>
+    <a class="social-btn" href="https://www.tiktok.com/@fffk_funcsport?_t=ZM-90WDZha6UqB&_r=1" class="social-btn" target="_blank" rel="noopener"><img src="/tiktoklogo.png" alt="TikTok"></a>
+    <a class="social-btn" href="https://youtube.com/@fffk2023" class="social-btn" target="_blank" rel="noopener"><img src="/youtubelogo.png" alt="YouTube"></a>
   </div>
     </div>
 
