--- a/news3.html
+++ b/news3.html
@@ -259,34 +259,41 @@
 
 <body>
   <header>
-    <div class="nav-row">
-      <div class="brand">
-  <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;border-radius:6px;box-shadow:0 6px 18px rgba(3,20,45,0.12);">
-        <nav class="main-nav">
-          <a href="index.html">Главная</a>
-          <a href="about.html">О нас</a>
-          <a href="index.html#news">Новости</a>
-          <a href="index.html#docs">Документы</a>
-          <!-- одна видимая дополнительная кнопка -->
-          <a href="leadership.html">Руководство</a>
-          <!-- остальные кнопки в выпадающем меню '...' (вынесено перед соцсетями) -->
-        </nav>
+    <div class="footer-inner">
+      <div style="display:flex;align-items:center;gap:12px">
+  <img src="/footer-logo.png" alt="Логотип Федерации" style="width:220px;height:auto;object-fit:cover;border-radius:8px;box-shadow:0 8px 24px rgba(3,20,45,0.12);">
       </div>
 
-          <div class="more-dropdown" id="moreDropdown">
-            <button class="more-btn" id="moreBtn" style="font-size:28px;padding:8px 10px;"><img src="/tochka.png" class="more-icon" alt="menu"></button>
-            <div class="more-menu" id="moreMenu" style="display:none">
-              <a href="media.html">Медиа</a>
-              <a href="competitions.html">Соревнования</a>
-              <a href="achievements.html">Достижения</a>
-              <a href="partners.html">Партнёры и спонсоры</a>
-              <a href="regional.html">Региональное отделение</a>
-            </div>
-          </div>
-  <div class="socials">
-        <a class="social-btn" href="https://instagram.com/yourprofile" target="_blank" rel="noopener">
+      <div style="display:flex;align-items:center;gap:18px;flex-wrap:wrap;justify-content:center;">
+        <nav class="footer-nav">
+          <a href="index.html">Главная</a>
+          <a href="about.html">О нас</a>
+          <a href="news.html">Новости</a>
+          <a href="media.html">Медиа</a>
+          <a href="index.html#docs">Документы</a>
+          <a href="competitions.html">Соревнования</a>
+        </nav>
+
+        <div class="footer-socials">
+  <a class="social-btn" href="https://instagram.com/fffk.20_23" target="_blank" rel="noopener">
   <img src="/instagramlogo.png" alt="Instagram">
   </a>
+  <a class="social-btn" href="https://t.me/fffkkz2023" target="_blank" rel="noopener">
+  <img src="/telegramlogo.png" alt="Telegram">
+  </a>
+  <a class="social-btn" href="https://www.facebook.com/share/1DFY4jSz3e/?mibextid=wwXIfr" target="_blank" rel="noopener">
+  <img src="/facebooklogo.png" alt="Facebook">
+  </a>
+  <a class="social-btn" href="https://www.tiktok.com/@fffk_funcsport?_t=ZM-90WDZha6UqB&_r=1" target="_blank" rel="noopener">
+  <img src="/tiktoklogo.png" alt="TikTok">
+  </a>
+  <a class="social-btn" href="https://youtube.com/@fffk2023" target="_blank" rel="noopener">
+  <img src="/youtubelogo.png" alt="YouTube">
+  </a>
+</div>
+
+      </div>
+    </div>
   <a class="social-btn" href="https://t.me/yourchannel" target="_blank"><img src="/telegramlogo.png" alt="Telegram"></a>
   <a class="social-btn" href="https://facebook.com/yourpage" target="_blank"><img src="/facebooklogo.png" alt="Facebook"></a>
   <a class="social-btn" href="https://tiktok.com/@yourprofile" target="_blank"><img src="/tiktoklogo.png" alt="TikTok"></a>
