fix(map): remove black wrapper border from map.html

--- a/map.html
+++ b/map.html
@@ -207,7 +207,7 @@
 
     <section class="section">
       <h1 style="font-size:24px;color:var(--blue);margin:0 0 12px 0;">Карта залов Казахстана</h1>
-  <div class="doc-card" style="background:#fff;padding:18px;border-radius:12px;box-shadow:0 8px 24px rgba(3,20,45,0.06);border:3px solid #000;">
+  <div class="doc-card" style="background:#fff;padding:18px;border-radius:12px;box-shadow:0 8px 24px rgba(3,20,45,0.06);">
         
 
         <div style="margin-top:14px;">
