--- a/leadership.html
+++ b/leadership.html
@@ -224,7 +224,6 @@
             <div class="more-menu" id="moreMenu" style="display:none">
               <a href="media.html">Медиа</a>
               <a href="competitions.html">Соревнования</a>
-              <a href="achievements.html">Достижения</a>
               <a href="partners.html">Партнёры и спонсоры</a>
               <a href="map.html">Карта залов</a>
             </div>
@@ -261,9 +260,8 @@
         <a href="index.html#news">Новости</a>
         <a href="index.html#docs">Документы</a>
         <a href="leadership.html">Руководство</a>
-        <a href="media.html">Медиа</a>
+        <a href="media.html">Медиア</a>
         <a href="competitions.html">Соревнования</a>
-        <a href="achievements.html">Достижения</a>
         <a href="partners.html">Партнёры и спонсоры</a>
   <a href="map.html">Карта залов</a>
       </nav>
@@ -284,6 +282,12 @@
   </section>
 
   <main class="container">
+
+<!-- Заголовок секции -->
+<div style="text-align: center; margin-bottom: 40px;">
+  <h1 style="font-size: 2.5em; margin-bottom: 20px; background: linear-gradient(135deg, #0b63b7 0%, #2b78b9 50%, #4facfe 100%); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-weight: 800;">Наша команда</h1>
+  <p style="font-size: 1.2em; color: #666666; line-height: 1.6; margin: 0;">Профессионалы, которые развивают спорт в стране</p>
+</div>
 
 <!-- Leadership: 4 portrait cards -->
 <div class="detail-row">
