Создание полноценной страницы новостей: добавлены все 4 карточки, обновлена навигация

--- a/leadership.html
+++ b/leadership.html
@@ -209,7 +209,7 @@
         <nav class="main-nav">
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
-          <a href="index.html#news">Новости</a>
+          <a href="news.html">Новости</a>
           <a href="index.html#docs">Документы</a>
           <!-- одна видимая дополнительная кнопка -->
           <a href="leadership.html">Руководство</a>
@@ -257,7 +257,7 @@
       <nav>
         <a href="index.html">Главная</a>
         <a href="about.html">О нас</a>
-        <a href="index.html#news">Новости</a>
+        <a href="news.html">Новости</a>
         <a href="index.html#docs">Документы</a>
         <a href="leadership.html">Руководство</a>
         <a href="media.html">Медиア</a>
