--- a/media.html
+++ b/media.html
@@ -142,7 +142,7 @@
             <ul class="nav-links">
                 <li><a href="/">Главная</a></li>
                 <li><a href="/about.html">О нас</a></li>
-                <li><a href="/news.html">Новости</a></li>
+                <li><a href="news.html">Новости</a></li>
                 <li><a href="/media.html">Медиа</a></li>
                 <li><a href="/leadership.html">Руководство</a></li>
             </ul>
