--- a/about.html
+++ b/about.html
@@ -638,7 +638,7 @@
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about.html">О нас</a></li>
-                    <li><a href="index.html#news">Новости</a></li>
+                    <li><a href="news.html">Новости</a></li>
                     <li><a href="index.html#docs">Документы</a></li>
                     <li><a href="leadership.html">Руководство</a></li>
                     <li><a href="media.html">Медиа</a></li>
