--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about.html">О нас</a></li>
-                    <li><a href="#news">Новости</a></li>
+                    <li><a href="news.html">Новости</a></li>
                     <li><a href="#docs">Документы</a></li>
                     <li><a href="leadership.html">Руководство</a></li>
                     <li><a href="media.html">Медиа</a></li>
