--- a/news3.html
+++ b/news3.html
@@ -270,7 +270,7 @@
           <a href="about.html">О нас</a>
           <a href="news.html">Новости</a>
           <a href="media.html">Медиа</a>
-          <a href="index.html#docs">Документы</a>
+          <a href="docs.html">Документы</a>
           <a href="competitions.html">Соревнования</a>
         </nav>
 
@@ -450,7 +450,7 @@
         <a href="about.html" style="color:#fff;font-weight:600;">О нас</a>
         <a href="news.html" style="color:#fff;font-weight:600;">Новости</a>
         <a href="media.html" style="color:#fff;font-weight:600;">Медиа</a>
-  <a href="index.html#docs" style="color:#fff;font-weight:600;">Документы</a>
+  <a href="docs.html" style="color:#fff;font-weight:600;">Документы</a>
         <a href="competitions.html" style="color:#fff;font-weight:600;">Соревнования</a>
       </nav>
       <div class="footer-socials">
