--- a/about.html
+++ b/about.html
@@ -639,7 +639,7 @@
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about.html">О нас</a></li>
                     <li><a href="news.html">Новости</a></li>
-                    <li><a href="index.html#docs">Документы</a></li>
+                    <li><a href="docs.html">Документы</a></li>
                     <li><a href="leadership.html">Руководство</a></li>
                     <li><a href="media.html">Медиа</a></li>
                     <li><a href="competitions.html">Соревнования</a></li>
@@ -794,7 +794,7 @@
                     <a href="about.html">О нас</a>
                     <a href="news.html">Новости</a>
                     <a href="media.html">Медиа</a>
-                    <a href="index.html#docs">Документы</a>
+                    <a href="docs.html">Документы</a>
                     <a href="competitions.html">Соревнования</a>
                 </nav>
                 
