--- a/index.html
+++ b/index.html
@@ -742,7 +742,7 @@
                     <li><a href="index.html">Главная</a></li>
                     <li><a href="about.html">О нас</a></li>
                     <li><a href="news.html">Новости</a></li>
-                    <li><a href="#docs">Документы</a></li>
+                    <li><a href="docs.html">Документы</a></li>
                     <li><a href="leadership.html">Руководство</a></li>
                     <li><a href="media.html">Медиа</a></li>
                     <li><a href="competitions.html">Соревнования</a></li>
@@ -910,7 +910,7 @@
                     <a href="about.html">О нас</a>
                     <a href="news.html">Новости</a>
                     <a href="media.html">Медиа</a>
-                    <a href="index.html#docs">Документы</a>
+                    <a href="docs.html">Документы</a>
                     <a href="competitions.html">Соревнования</a>
                 </nav>
                 
