--- a/leadership.html
+++ b/leadership.html
@@ -210,7 +210,7 @@
           <a href="index.html">Главная</a>
           <a href="about.html">О нас</a>
           <a href="news.html">Новости</a>
-          <a href="index.html#docs">Документы</a>
+          <a href="docs.html">Документы</a>
           <!-- одна видимая дополнительная кнопка -->
           <a href="leadership.html">Руководство</a>
           <!-- остальные кнопки в выпадающем меню '...' (вынесено перед соцсетями) -->
@@ -258,7 +258,7 @@
         <a href="index.html">Главная</a>
         <a href="about.html">О нас</a>
         <a href="news.html">Новости</a>
-        <a href="index.html#docs">Документы</a>
+        <a href="docs.html">Документы</a>
         <a href="leadership.html">Руководство</a>
         <a href="media.html">Медиア</a>
         <a href="competitions.html">Соревнования</a>
@@ -364,7 +364,7 @@
         <a href="about.html" style="color:#fff;font-weight:600;">О нас</a>
         <a href="news.html" style="color:#fff;font-weight:600;">Новости</a>
     <a href="media.html" style="color:#fff;font-weight:600;">Медиа</a>
-  <a href="index.html#docs" style="color:#fff;font-weight:600;">Документы</a>
+  <a href="docs.html" style="color:#fff;font-weight:600;">Документы</a>
         <a href="competitions.html" style="color:#fff;font-weight:600;">Соревнования</a>
       </nav>
       <div class="footer-socials">
