--- a/news2.html
+++ b/news2.html
@@ -203,7 +203,7 @@
           <a href="about.html">О нас</a>
           <a href="news.html">Новости</a>
           <a href="media.html">Медиа</a>
-          <a href="index.html#docs">Документы</a>
+          <a href="docs.html">Документы</a>
           <a href="competitions.html">Соревнования</a>
         </nav>
 
@@ -246,7 +246,7 @@
         <a href="index.html">Главная</a>
         <a href="about.html">О нас</a>
         <a href="index.html#news">Новости</a>
-        <a href="index.html#docs">Документы</a>
+        <a href="docs.html">Документы</a>
         <a href="leadership.html">Руководство</a>
         <a href="media.html">Медиа</a>
         <a href="competitions.html">Соревнования</a>
@@ -368,7 +368,7 @@
         <a href="about.html" style="color:#fff;font-weight:600;">О нас</a>
         <a href="news.html" style="color:#fff;font-weight:600;">Новости</a>
         <a href="media.html" style="color:#fff;font-weight:600;">Медиа</a>
-  <a href="index.html#docs" style="color:#fff;font-weight:600;">Документы</a>
+  <a href="docs.html" style="color:#fff;font-weight:600;">Документы</a>
 
         <a href="competitions.html" style="color:#fff;font-weight:600;">Соревнования</a>
       </nav>
